fix links to articles

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     </div>
 
                     <div class="project-section">
-                        <a href="http://elliot.website/a/?Visualizing%20Process%20with%20ES6%20Generators">
+                        <a href="http://elliot.website/a/article_visualizing">
                             <h3><b class="category-tag">article</b> Visualizing Process With ES6 Generators</b></h3>
                             <img style="height: 60%;" src="media/function_process.png" alt="A screenshot of Visualizing Process With ES6 Generators article">
                         </a>
@@ -92,7 +92,7 @@
                     </div>
 
                     <div class="project-section">
-                        <a href="http://elliot.website/a/?Making%20the%20World%20From%20Scratch">
+                        <a href="http://elliot.website/a/article_world">
                             <h3><b class="category-tag">article</b> Making the World From Scratch</b></h3>
                             <img style="height: 60%;" src="media/makingtheworldfromscratch.png" alt="A screenshot of the Making the World From Scratch article">
                         </a>
