Add payment pointer

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
         <title>Elliot.website</title>
         <meta name="description" content="Elliot's portfolio website.">
+        <meta name="monetization" content="$ilp.uphold.com/2x8E7NZkrZFN">
     </head>
     <body>
         <div class="vertical-scroll-wrap">
