add title to quantum talk html

--- a/qubit-talk/index.html
+++ b/qubit-talk/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Qubit Gen 2</title>
+<title>Visualizing Qubits for Quantum Education</title>
 <link rel="stylesheet" type="text/css" href="./inspector.css">
 <script src='https://unpkg.com/panzoom@9.4.0/dist/panzoom.min.js'></script>
 <body>
