remove slide from qubit-talk

--- a/qubit-talk/index.html
+++ b/qubit-talk/index.html
@@ -94,7 +94,7 @@
         </section>
 
         <section style="display: flex;
-        align-items: center;" id="pre-figma2">
+        align-items: center;">
             <span style="width: min-content; padding-top: 20vh;">
                 <h3 style="margin: 0;">Shapez.io</h3>
                 <video controls>
@@ -103,10 +103,6 @@
                 </video>
                 <br>source: <a href="store.steampowered.com/app/1318690/shapezio">store.steampowered.com/app/1318690/shapezio</a>
             </span>
-        </section>
-
-        <section id="figma2">
-            <h2>Designs</h2>
         </section>
 
         <!-----------------------------------
@@ -384,9 +380,4 @@
         if (i !== 0) videoEl.currentTime = 10; // don't set time of ibm video
         i++;
     }
-
-    document.getElementById('pre-figma2').addEventListener('click', () => {
-        document.getElementById('figma2').appendChild(el);
-        panzoom(el);
-    })
 </script>
