fix error in text

--- a/qubit-talk/index.html
+++ b/qubit-talk/index.html
@@ -165,7 +165,7 @@
                     <img src="up.png" style="height: 5vw; display: inline; vertical-align: middle;">
                     <img src="diag.png" style="height: 5vw; display: inline; vertical-align: middle;"></h3>
                 <ul>
-                    <li>+ Show off entanglement & phase<span style="font-size: 1vw;">(non-complex phase)</span> </li>
+                    <li>+ Show off superposition & phase<span style="font-size: 1vw;">(non-complex phase)</span> </li>
                     <li>+ Simple and color coded</li>
                     <li> - Limited</li>
                 </ul>
