fix stylization of quantumcat

--- a/quantumcat-playground/index.html
+++ b/quantumcat-playground/index.html
@@ -85,7 +85,7 @@
             again to remove the gate.
         </p>
         <p>
-            Press the "Run on QuantumCat" button to send your Quantum Circuit to the cloud where
+            Press the "Run on quantumcat" button to send your Quantum Circuit to the cloud where
             it will be simulated 1024 times. Once the result of the simulations come back, they
             will be plotted in the bar graph below.
         </p>
