quantum playground fixes, ty S

--- a/quantumcat-playground/index.html
+++ b/quantumcat-playground/index.html
@@ -23,7 +23,7 @@
     .plot {
         display: block;
         color: #EC4680;
-        font: 10px system-ui, sans-serif;
+        font: 11px system-ui, sans-serif;
         height: auto;
         height: intrinsic;
         max-width: 100%;
@@ -86,7 +86,7 @@
         </p>
         <p>
             Press the "Run on quantumcat" button to send your Quantum Circuit to the cloud where
-            it will be simulated 1024 times. Once the result of the simulations come back, they
+            it will be simulated 1024 times. Once the result of the simulations comes back, they
             will be plotted in the bar graph below.
         </p>
 
@@ -95,7 +95,7 @@
         <p>This playground is a collaboration between
             <a href="https://github.com/artificial-brain/quantumcat">quantumcat</a>,
             an open-source quantum computing library that allows you to execute Quantum Circuits using
-            Cirq, Qiskit or Braket; and <a href="https://elliot.website">Elliot</a>.
+            Cirq, Qiskit or Braket; and me, <a href="https://elliot.website">Elliot</a>.
         </p>
         <p>I hope this website can give you a small sense of how a Quantum Circuit runs. Thank you
             for taking a look.
