add quantumcat playground to recent work

--- a/recent-work/index.html
+++ b/recent-work/index.html
@@ -24,6 +24,7 @@
                 </p>
                 <ul>
                     <li><a href="/editor/">Polytope - Experimental Code Editor</a></li>
+                    <li><a href="/quantumcat-playground/">Qubit Playground - QuantumCat collaboration</a></li>
                     <li><a href="/qubit-talk">Qubit Playground Interactive Presentation "What if you could see
                             qubits!? 👀"</a></li>
                     <li><a href="/qubit">Qubit Playground</a></li>
